--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: mhtemplate
 Title: pkgdown template and utilities for GESIS Methods Hub docs
 Version: 0.0.0.9000
 Authors@R: 
-    person("David", "Schoch", , "david@schochastics.net", role = c("aut", "cre"), comment = c(ORCID = "0000-0003-2952-4812")
+    person("David", "Schoch", , "david@schochastics.net", role = c("aut", "cre"), comment = c(ORCID = "0000-0003-2952-4812"))
 Description: This is a private template for use by GESIS Methods Hub
     packages.  Please don't use it for your own non-Methods Hub package.
 License: MIT + file LICENSE
